fixed logic for slider on mobile, moved popup to its own component

--- a/my-app/public/css/app.css
+++ b/my-app/public/css/app.css
@@ -932,6 +932,9 @@ select {
 .h-3 {
   height: 0.75rem;
 }
+.h-2 {
+  height: 0.5rem;
+}
 .max-h-\[90vh\] {
   max-height: 90vh;
 }
@@ -967,6 +970,9 @@ select {
 }
 .w-3 {
   width: 0.75rem;
+}
+.w-2 {
+  width: 0.5rem;
 }
 .max-w-4xl {
   max-width: 56rem;
@@ -1052,6 +1058,9 @@ select {
 .gap-4 {
   gap: 1rem;
 }
+.gap-1\.5 {
+  gap: 0.375rem;
+}
 .overflow-hidden {
   overflow: hidden;
 }
@@ -1132,6 +1141,10 @@ select {
 .bg-gray-300 {
   --tw-bg-opacity: 1;
   background-color: rgb(209 213 219 / var(--tw-bg-opacity, 1));
+}
+.bg-gray-400 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(156 163 175 / var(--tw-bg-opacity, 1));
 }
 .bg-cover {
   background-size: cover;
@@ -1484,6 +1497,11 @@ body
   .hover\:bg-gray-800:hover {
   --tw-bg-opacity: 1;
   background-color: rgb(31 41 55 / var(--tw-bg-opacity, 1));
+}
+
+  .hover\:bg-gray-600:hover {
+  --tw-bg-opacity: 1;
+  background-color: rgb(75 85 99 / var(--tw-bg-opacity, 1));
 }
 
   .hover\:text-gray-400:hover {
